Flask wtf forms action button setup

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -16,7 +16,7 @@
     <div class="panel-heading">Buttons that do stuff</div>
 
     <div class="panel-body">
-      <button type="button" class="btn btn-primary">Button00</button>
+      {{ form.button00(class="btn btn-primary")}}
     </div>
     <div class="panel-body">
       <button type="button" class="btn btn-primary">Button01</button>
