--- a/templates/panel.html
+++ b/templates/panel.html
@@ -16,10 +16,14 @@
     <div class="panel-heading">Buttons that do stuff</div>
 
     <div class="panel-body">
-      {{ form.button00(class="btn btn-primary")}}
+      <form method=post>
+        {{ form.button00(class="btn btn-primary")}}
+      </form>
     </div>
     <div class="panel-body">
-      <button type="button" class="btn btn-primary">Button01</button>
+      <form method=post>
+        {{ form.button01(class="btn btn-primary")}}
+      </form>
     </div>
     <div class="panel-body">
       <button type="button" class="btn btn-primary">Button02</button>
@@ -38,6 +42,7 @@
 
   </div>
 </div>
+
 
 </body>
 </html>
