Added styling to server control buttons

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -44,12 +44,12 @@
 
         <div class="panel-body">
           <form method=post>
-            {{ form.button00(class="btn btn-primary")}}
+            {{ form.button00(class="btn btn-success")}}
           </form>
         </div>
         <div class="panel-body">
           <form method=post>
-            {{ form.button01(class="btn btn-primary")}}
+            {{ form.button01(class="btn btn-danger")}}
           </form>
         </div>
       
