Updated button control script. Proper buttons assigned

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -17,22 +17,22 @@
 
         <div class="panel-body">
           <form method=post>
-            {{ form.button00(class="btn btn-primary")}}
+            {{ form.event01(class="btn btn-primary")}}
           </form>
         </div>
         <div class="panel-body">
           <form method=post>
-            {{ form.button01(class="btn btn-primary")}}
+            {{ form.event02(class="btn btn-primary")}}
           </form>
         </div>
         <div class="panel-body">
           <button type="button" class="btn btn-primary">Button02</button>
         </div>
         <div class="panel-body">
-           <button type="button" class="btn btn-warning">Button03</button>
+           <button type="button" class="btn btn-primary">Button03</button>
         </div>
         <div class="panel-body">
-           <button type="button" class="btn btn-danger">CLEAR</button>
+           <button type="button" class="btn btn-primary">Button04</button>
         </div>
 
   </div>
@@ -44,12 +44,12 @@
 
         <div class="panel-body">
           <form method=post>
-            {{ form.button00(class="btn btn-success")}}
+            {{ form.activate(class="btn btn-success")}}
           </form>
         </div>
         <div class="panel-body">
           <form method=post>
-            {{ form.button01(class="btn btn-danger")}}
+            {{ form.deactivate(class="btn btn-danger")}}
           </form>
         </div>
       
