--- a/templates/panel.html
+++ b/templates/panel.html
@@ -26,13 +26,19 @@
           </form>
         </div>
         <div class="panel-body">
-          <button type="button" class="btn btn-primary">Button02</button>
+           <form method=post>
+            {{ form.event03(class="btn btn-primary")}}
+          </form>
         </div>
         <div class="panel-body">
-           <button type="button" class="btn btn-primary">Button03</button>
+           <form method=post>
+            {{ form.event04(class="btn btn-primary")}}
+          </form>
         </div>
         <div class="panel-body">
-           <button type="button" class="btn btn-primary">Button04</button>
+           <form method=post>
+            {{ form.event05(class="btn btn-primary")}}
+          </form>
         </div>
 
   </div>
@@ -44,12 +50,12 @@
 
         <div class="panel-body">
           <form method=post>
-            {{ form.activate(class="btn btn-success")}}
+            {{ form.activate(class="btn btn-success btn-block")}}
           </form>
         </div>
         <div class="panel-body">
           <form method=post>
-            {{ form.deactivate(class="btn btn-danger")}}
+            {{ form.deactivate(class="btn btn-danger btn-block")}}
           </form>
         </div>
       
