--- a/templates/panel.html
+++ b/templates/panel.html
@@ -41,6 +41,18 @@
           </form>
         </div>
 
+    <div class="panel-footer ">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            <h4 style="color: green;"> {{ message }} </h4>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
+    </div>
+      
+
   </div>
 </div>
 <!--End of Button Panel-->
