--- a/templates/panel.html
+++ b/templates/panel.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/custom.css') }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
@@ -42,6 +43,13 @@
         </div>
 
     <div class="panel-footer ">
+
+      <div class="progress">
+        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="25"
+        aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+      </div>
+    </div>
+
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           {% for message in messages %}
