--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,8 @@
-.progress-bar{
-
-	width: 25%; 
-}
-
+.btn {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+} 
