--- a/templates/panel.html
+++ b/templates/panel.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/custom.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles.css')}}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
@@ -18,37 +18,36 @@
 
         <div class="panel-body">
           <form method=post>
-            {{ form.event01(class="btn btn-primary")}}
+            <a href="#event01"></a>
+            {{ form.event01(class="btn btn-primary", id="event01")}}
           </form>
         </div>
         <div class="panel-body">
           <form method=post>
-            {{ form.event02(class="btn btn-primary")}}
+            <a href="#event02"></a>
+            {{ form.event02(class="btn btn-primary", id="event02")}}
           </form>
         </div>
         <div class="panel-body">
            <form method=post>
-            {{ form.event03(class="btn btn-primary")}}
+            <a href="#event03"></a>
+            {{ form.event03(class="btn btn-primary", id="event03")}}
           </form>
         </div>
         <div class="panel-body">
            <form method=post>
-            {{ form.event04(class="btn btn-primary")}}
+            <a href="#event04"></a>
+            {{ form.event04(class="btn btn-primary", id="event04")}}
           </form>
         </div>
         <div class="panel-body">
            <form method=post>
-            {{ form.event05(class="btn btn-primary")}}
+            <a href="#event05"></a>
+            {{ form.event05(class="btn btn-primary", id="event05")}}
           </form>
         </div>
 
     <div class="panel-footer ">
-
-      <div class="progress">
-        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="25"
-        aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-      </div>
-    </div>
 
       {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -70,19 +69,15 @@
 
         <div class="panel-body">
           <form method=post>
-            {{ form.activate(class="btn btn-success btn-block")}}
-          </form>
-        </div>
-        <div class="panel-body">
-          <form method=post>
-            {{ form.deactivate(class="btn btn-danger btn-block")}}
+            <a href="#activate"></a>
+            {{ form.activate(class="btn btn-success", id="activate")}}
           </form>
         </div>
       
-   
 
   </div>
 </div>
+
 
 
 
